# road_network_prolog

./: README.md  main.py  pyproject.toml
app/db/: database.py
app/mapping/: graph.py  pathfinding.py  visualization.py
app/models/: models.py
app/prolog/: sample_polog.pl
app/utils/: config.py  data_extractor.py
